// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FollowingSwitch component should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-marginRight-1b7u577"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "16px",
          "letterSpacing": "0.32px",
          "lineHeight": "24px",
        }
      }
    >
      No
    </div>
  </div>
  <button
    className="css-view-g5y9jx"
    dir={null}
    role="button"
    style={
      {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    type="button"
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-10jnvle r-borderWidth-rs99b7 r-flexDirection-18u37iz r-height-1472mwg r-paddingRight-rierb r-width-1mhb1uw"
        dir={null}
        style={
          {
            "backgroundColor": "rgba(231,236,239,1.00)",
            "borderBottomColor": "rgba(231,236,239,1.00)",
            "borderLeftColor": "rgba(231,236,239,1.00)",
            "borderRightColor": "rgba(231,236,239,1.00)",
            "borderTopColor": "rgba(231,236,239,1.00)",
            "paddingLeft": "1px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderRadius-18c69zk r-height-z80fyv r-width-19wmn03"
          dir={null}
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`FollowingSwitch component should render correctly after call onPress with state "yes" as false 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-marginRight-1b7u577"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Medium",
          "fontSize": "16px",
          "letterSpacing": "0.16px",
          "lineHeight": "24px",
        }
      }
    >
      Yes
    </div>
  </div>
  <button
    className="css-view-g5y9jx"
    dir={null}
    role="button"
    style={
      {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    type="button"
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-10jnvle r-borderWidth-rs99b7 r-flexDirection-18u37iz r-height-1472mwg r-paddingRight-rierb r-width-1mhb1uw"
        dir={null}
        style={
          {
            "backgroundColor": "rgba(231,236,239,1.00)",
            "borderBottomColor": "rgba(231,236,239,1.00)",
            "borderLeftColor": "rgba(231,236,239,1.00)",
            "borderRightColor": "rgba(231,236,239,1.00)",
            "borderTopColor": "rgba(231,236,239,1.00)",
            "paddingLeft": "1px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderRadius-18c69zk r-height-z80fyv r-width-19wmn03"
          dir={null}
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`FollowingSwitch component should render correctly after call onPress with state "yes" as true 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-marginRight-1b7u577"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "16px",
          "letterSpacing": "0.32px",
          "lineHeight": "24px",
        }
      }
    >
      No
    </div>
  </div>
  <button
    className="css-view-g5y9jx"
    dir={null}
    role="button"
    style={
      {
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
    type="button"
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-10jnvle r-borderWidth-rs99b7 r-flexDirection-18u37iz r-height-1472mwg r-paddingRight-rierb r-width-1mhb1uw"
        dir={null}
        style={
          {
            "backgroundColor": "rgba(231,236,239,1.00)",
            "borderBottomColor": "rgba(231,236,239,1.00)",
            "borderLeftColor": "rgba(231,236,239,1.00)",
            "borderRightColor": "rgba(231,236,239,1.00)",
            "borderTopColor": "rgba(231,236,239,1.00)",
            "paddingLeft": "1px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderRadius-18c69zk r-height-z80fyv r-width-19wmn03"
          dir={null}
        />
      </div>
    </div>
  </button>
</div>
`;
